--- a/test.html
+++ b/test.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="tiny-slider.css">
 </head>
 <body>
+  Testing
     <ul class="carousel">
         <li><img src="http://placehold.it/200x200" alt=""></li>
         <li><img src="http://placehold.it/200x200" alt=""></li>
