updated index file

--- a/index.html
+++ b/index.html
@@ -11,12 +11,6 @@
 
         ul#customize-thumbnails li {
             display: inline-block;
-            width: 15%;
-        }
-
-        ul#customize-thumbnails li img {
-            width: 100%;
-            height: auto;
         }
     </style>
 </head>
@@ -31,19 +25,19 @@
     </ul>
     <ul class="thumbnails" id="customize-thumbnails">
         <li>
-          <img src="https://source.unsplash.com/collection/993239/600x400" alt="" width="600" height="400">
+          <img src="https://source.unsplash.com/collection/993239/200x200" alt="">
         </li>
         <li>
-          <img src="https://source.unsplash.com/collection/1673600/600x400" alt="" width="600" height="400">
+          <img src="https://source.unsplash.com/collection/1673600/200x200" alt="">
         </li>
         <li>
-          <img src="https://source.unsplash.com/collection/1513994/600x400" alt="" width="600" height="400">
+          <img src="https://source.unsplash.com/collection/1513994/200x200" alt="">
         </li>
         <li>
-          <img src="https://source.unsplash.com/collection/502925/600x400" alt="" width="600" height="400">
+          <img src="https://source.unsplash.com/collection/502925/200x200" alt="">
         </li>
         <li>
-          <img src="https://source.unsplash.com/collection/1891993/600x400" alt="" width="600" height="400">
+          <img src="https://source.unsplash.com/collection/1891993/200x200" alt="">
         </li>
       </ul>
     
